@@ -6,6 +6,7 @@ import com.intellij.history.LocalHistory;
 import com.intellij.history.LocalHistoryAction;
 import com.intellij.ide.DataManager;
 import com.intellij.ide.DeleteProvider;
+import com.intellij.ide.GeneralSettings;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.actions.RevealFileAction;
 import com.intellij.lang.LangBundle;
@@ -20,7 +21,6 @@ import com.intellij.openapi.application.ApplicationNamesInfo;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.fileEditor.impl.NonProjectFileWritingAccessProvider;
-import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.progress.Task;
@@ -36,7 +36,12 @@ import com.intellij.openapi.vfs.VFileProperty;
 import com.intellij.openapi.vfs.VfsUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.WritingAccessProvider;
-import com.intellij.psi.*;
+import com.intellij.psi.PsiDirectory;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiFileSystemItem;
+import com.intellij.psi.SmartPointerManager;
+import com.intellij.psi.SmartPsiElementPointer;
 import com.intellij.psi.util.PsiTreeUtil;
 import com.intellij.psi.util.PsiUtilBase;
 import com.intellij.psi.util.PsiUtilCore;
@@ -49,7 +54,9 @@ import com.intellij.testFramework.LightVirtualFile;
 import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.SmartList;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.io.PlatformNioHelper;
 import com.intellij.util.io.ReadOnlyAttributeUtil;
+import com.intellij.util.io.TrashBin;
 import com.intellij.util.ui.IoErrorText;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -59,7 +66,6 @@ import java.io.IOException;
 import java.nio.file.FileSystemException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -235,11 +241,8 @@ public final class DeleteHandler {
   }
 
   private static boolean isLocalFile(PsiElement e) {
-    if (e instanceof PsiFileSystemItem) {
-      VirtualFile file = ((PsiFileSystemItem)e).getVirtualFile();
-      if (file != null && file.isInLocalFileSystem()) return true;
-    }
-    return false;
+    var file = e instanceof PsiFileSystemItem fsItem ? fsItem.getVirtualFile() : null;
+    return file != null && file.isInLocalFileSystem();
   }
 
   private static boolean clearFileReadOnlyFlags(Project project, PsiElement elementToDelete) {
@@ -307,18 +310,18 @@ public final class DeleteHandler {
   }
 
   private static void doDeleteFiles(Project project, PsiElement[] fileElements) {
-    for (PsiElement file : fileElements) {
+    for (var file : fileElements) {
       if (!clearFileReadOnlyFlags(project, file)) return;
     }
 
-    LocalFilesDeleteTask task = new LocalFilesDeleteTask(project, fileElements);
+    var task = new LocalFilesDeleteTask(project, fileElements);
     ProgressManager.getInstance().run(task);
     if (task.error != null) {
-      String file = task.error instanceof FileSystemException ? ((FileSystemException)task.error).getFile() : null;
+      var file = task.error instanceof FileSystemException ? ((FileSystemException)task.error).getFile() : null;
       if (file != null) {
         String message = IoErrorText.message(task.error), yes = RevealFileAction.getActionName(), no = CommonBundle.getCloseButtonText();
         if (Messages.showYesNoDialog(project, message, CommonBundle.getErrorTitle(), yes, no, Messages.getErrorIcon()) == Messages.YES) {
-          RevealFileAction.openFile(Paths.get(file));
+          RevealFileAction.openFile(Path.of(file));
         }
       }
       else {
@@ -330,13 +333,14 @@ public final class DeleteHandler {
     }
     if (!task.processed.isEmpty()) {
       ApplicationManager.getApplication().runWriteAction(() -> {
-        for (PsiElement fileElement : task.processed) {
+        for (var fileElement : task.processed) {
           try {
             fileElement.delete();
           }
           catch (IncorrectOperationException e) {
             ApplicationManager.getApplication().invokeLater(
-              () -> Messages.showMessageDialog(project, e.getMessage(), CommonBundle.getErrorTitle(), Messages.getErrorIcon()));
+              () -> Messages.showMessageDialog(project, e.getMessage(), CommonBundle.getErrorTitle(), Messages.getErrorIcon())
+            );
           }
         }
       });
@@ -383,11 +387,11 @@ public final class DeleteHandler {
   private static final class LocalFilesDeleteTask extends Task.Modal {
     private final PsiElement[] myFileElements;
 
-    List<PsiElement> processed = new ArrayList<>();
-    VirtualFile aborted = null;
-    Throwable error = null;
+    private final List<PsiElement> processed = new ArrayList<>();
+    private VirtualFile aborted = null;
+    private Throwable error = null;
 
-    LocalFilesDeleteTask(Project project, PsiElement[] fileElements) {
+    private LocalFilesDeleteTask(Project project, PsiElement[] fileElements) {
       super(project, IdeBundle.message("progress.deleting"), true);
       myFileElements = fileElements;
     }
@@ -396,9 +400,12 @@ public final class DeleteHandler {
     public void run(@NotNull ProgressIndicator indicator) {
       try {
         indicator.setText(IdeBundle.message("progress.counting.files"));
-        Ref<Integer> curFileCount = new Ref<>(0);
-        for (PsiElement element : myFileElements) {
-          VirtualFile file = ((PsiFileSystemItem)element).getVirtualFile();
+
+        var toBin = TrashBin.isSupported() && GeneralSettings.getInstance().isDeletingToBin();
+
+        var curFileCount = new Ref<>(0);
+        for (var element : myFileElements) {
+          var file = ((PsiFileSystemItem)element).getVirtualFile();
           Files.walkFileTree(file.toNioPath(), new NioFiles.StatsCollectingVisitor() {
             @Override
             protected void countDirectory(Path dir, BasicFileAttributes attrs) {
@@ -416,35 +423,38 @@ public final class DeleteHandler {
             }
           });
         }
-        final int totalFileCount = curFileCount.get();
+
+        int totalFileCount = curFileCount.get();
         curFileCount.set(0);
         indicator.setIndeterminate(totalFileCount <= 1); // don't show progression when deleting single file
         for (int i = 0; i < myFileElements.length; i++) {
-          PsiElement element = myFileElements[i];
+          var element = myFileElements[i];
           if (indicator.isCanceled()) break;
           indicator.setFraction((double) i / myFileElements.length);
 
-          VirtualFile file = ((PsiFileSystemItem)element).getVirtualFile();
+          var file = ((PsiFileSystemItem)element).getVirtualFile();
           aborted = file;
-          Path path = file.toNioPath();
+          var path = file.toNioPath();
           indicator.setText(path.toString());
 
-          try {
+          if (toBin && PlatformNioHelper.isLocal(path)) {
+            TrashBin.moveToTrash(path);
+          }
+          else {
             NioFiles.deleteRecursively(path, p -> {
-              curFileCount.set(curFileCount.get() + 1);
               indicator.checkCanceled();
               indicator.setFraction((double)curFileCount.get() / totalFileCount);
               indicator.setText2(path.relativize(p).toString());
+              curFileCount.set(curFileCount.get() + 1);
             });
-            processed.add(element);
-            aborted = null;
           }
-          catch (ProcessCanceledException ignored) { }
+          processed.add(element);
+          aborted = null;
         }
       }
-      catch (Throwable t) {
-        Logger.getInstance(getClass()).info(t);
-        error = t;
+      catch (IOException e) {
+        Logger.getInstance(getClass()).info(e);
+        error = e;
       }
     }
   }
